--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <li class="nav-item"><a href="#boosters" class="nav-link">Boosters</a></li>
                     <li class="nav-item"><a href="#bowls" class="nav-link">Bowls</a></li>
                     <li class="nav-item"><a href="#juices" class="nav-link">Juices</a></li>
+                    <li class="nav-item"><a href="full-menu.pdf" class="nav-link" target="_blank">Full Menu</a></li>
                 </ul>
             </nav>
         </div>
@@ -28,14 +29,15 @@
         <div class="container">
             <p class="m-0 fw-bold">WE ARE 100% ORGANIC / NON-GMO / VEGAN / GLUTEN-FREE / PEANUT-FREE / SOY-FREE / DAIRY-FREE</p>
         </div>
-    </section>
 
     <section class="hero-section text-center p-5 mb-4 text-white">
         <div class="container">
             <h2>Freshly Blended Goodness</h2>
             <p class="lead">Fuel your body with nature's best ingredients.</p>
+            <a href="images/brochure-inside.png" class="btn btn-primary btn-lg mt-3" target="_blank">View Full Menu</a>
         </div>
     </section>
+</section>
 
     <main class="container">
 
